# ObjRenderer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: ObjParser.h  Types.h
src/: ObjParser.c  main.c
